# sqlr

./: Cargo.toml  LICENSE  README.md  sqlr_data.db
src/: main.rs
src/executor/: mod.rs
src/mysql/: auth.rs  error.rs  mod.rs  packet.rs  protocol.rs  server.rs
src/parser/: mod.rs
src/storage/: mod.rs
test/: test_count_star.sql  test_features.sql  test_new_features.sql
web/: index.html  script.js  style.css  test.html
