[package]
name = "sqlr"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5.0", features = ["fs"] }
rand = "0.8"
bincode = "1.3"
bytes = "1.5"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.3", features = ["v4"] }
thiserror = "1.0"
byteorder = "1.4"
